# ai-engineer-club

.devcontainer/: devcontainer.json
day1/: movie_expert_agent.ipynb  pyproject.toml
investment_researcher/: .gitignore  app.py  graph.py  main.py  notebook.ipynb  pyproject.toml
investment_researcher/agents/: chat_agent.py  news_agent.py  numbers_agent.py  report_agent.py  sec_agent.py
life-coach-agent/: life-coach-memory.db  main.py  plan.txt  pyproject.toml
movie-agent/: movie_expert_agent.ipynb
restaurant_bot/: .gitignore  guardrails.py  main.py  models.py  pyproject.toml  requirements.txt
restaurant_bot/my_agents/: complaints_agent.py  menu_agent.py  order_agent.py  reservation_agent.py  triage_agent.py  wire_handoffs.py
story_book_maker/: .gitignore  pyproject.toml
story_book_maker/story_book_maker/: agent.py  callbacks.py  prompt.py
story_book_maker/story_book_maker/sub_agents/illustrator/: agent.py  page_illustrator_agent.py  parallel_illustrations.py  prompt.py  tools.py
story_book_maker/story_book_maker/sub_agents/story_writer/: agent.py  prompt.py
